--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -19,7 +19,23 @@ pluginManagement {
 plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
     id "com.android.application" version "8.1.0" apply false
+    // START: FlutterFire Configuration
+    id "com.google.gms.google-services" version "4.3.15" apply false
+    // END: FlutterFire Configuration
     id "org.jetbrains.kotlin.android" version "1.8.22" apply false
 }
 
 include ":app"
+gradle.projectsLoaded { settings ->
+    settings.gradle.rootProject {
+        allprojects {
+            afterEvaluate { project ->
+                if (project.name == 'sign_in_with_apple') {
+                    project.android {
+                        namespace "com.aboutyou.dart_packages.sign_in_with_apple"
+                    }
+                }
+            }
+        }
+    }
+}
