--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   shared_preferences: ^2.2.0
   http: ^1.1.0
-  intl: ^0.18.1
+  intl: ^0.19.0
   flutter_staggered_animations: ^1.1.1
 
 dev_dependencies:
