--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,12 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  provider: ^6.0.5
-  shared_preferences: ^2.2.0
-  http: ^1.1.0
+  provider: ^6.1.5
+  shared_preferences: ^2.5.3
+  http: ^1.4.0
   intl: ^0.19.0
   flutter_staggered_animations: ^1.1.1
+  flutter_tts: ^4.2.3
 
 dev_dependencies:
   flutter_test:
